--- a/src/components/Matches/styles/MatchesPage.scss
+++ b/src/components/Matches/styles/MatchesPage.scss
@@ -18,22 +18,29 @@
   }
 
   .profile-wrapper {
-    padding: $mainPadding;
+    padding: 0;
     margin: $mainPadding auto;
     width: var(--width);
     max-width: var(--maxWidth);
 
     border: 2px solid rgb(190, 190, 190);
-    background-color: rgb(242, 242, 242);
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.09);
     text-align: center;
     border-radius: 10px;
   }
+
+  .info {
+    margin: $mainPadding;
+  }
   .name {
-    margin-bottom: $mainPadding;
+    margin-bottom: $mainPadding/2;
   }
 
   .button {
     margin-top: calc(#{$mainPadding} - 2rem);
+  }
+
+  img {
+    width: 100%;
   }
 }
