--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@ body {
   margin: 1em;
   padding: 0;
   font-family: sans-serif;
+  color: rgb(78, 78, 78);
+  background-color: rgb(240, 240, 240);
 }
