styling matches. add variable sass

--- a/src/components/Matches/styles/MatchesPage.scss
+++ b/src/components/Matches/styles/MatchesPage.scss
@@ -1,4 +1,5 @@
 @import '../../../scss-lib/mixin';
+@import '../../../scss-lib/var';
 
 #MachesPage {
   $mainPadding: 50px;
@@ -36,8 +37,21 @@
     margin-bottom: $mainPadding/2;
   }
 
+  .details {
+    font-size: 0.9rem;
+    color: lighten($FONT_COLOR, 15%);
+  }
+
   .button {
     margin-top: calc(#{$mainPadding} - 2rem);
+  }
+  .btn-default {
+    background-color: $DUTCH_ORANGE;
+    color: white;
+    transition: $TRANSITION;
+    &:hover {
+      background-color: lighten($DUTCH_ORANGE, 15%);
+    }
   }
 
   img {
