--- a/src/components/Nav/styles/NavComponent.scss
+++ b/src/components/Nav/styles/NavComponent.scss
@@ -2,8 +2,12 @@
 @import '../../../scss-lib/var';
 
 #NavComponent {
-  display: flex;
-  justify-content: space-between;
+  @include flex;
+  justify-content: space-around;
+  align-items: center;
+  @include bottom-boarder-shadow;
+  height: 5em;
+  margin-bottom: 2em;
 
   .NavComponent-Link,
   .NavComponent-Link:focus,
@@ -11,15 +15,17 @@
   .NavComponent-Link:visited,
   .NavComponent-Link:link,
   .NavComponent-Link:active {
+    font-size: 2em;
     text-decoration: none;
-    color: $DUTCH_ORANGE;
-    & :hover {
-        color: darken($DUTCH_ORANGE, 15%);
-    }
-  }
+    color: $FONT_COLOR;
 
-  & div {
-    margin: 1em 1em 4em 1em;
+  .activeNav{
+    color: $DUTCH_ORANGE
   }
+}
+  //
+  //& div {
+  //  margin: 1em 1em 4em 1em;
+  //}
 }
 
