--- a/src/components/Matches/styles/MatchesPage.scss
+++ b/src/components/Matches/styles/MatchesPage.scss
@@ -11,7 +11,7 @@
     --width: 46%;
     --maxWidth: 500px;
 
-    display: flex;
+    @include flex;
     justify-content: space-around;
     flex-wrap: wrap;
   }
