--- a/src/components/Nav/styles/NavComponent.scss
+++ b/src/components/Nav/styles/NavComponent.scss
@@ -5,7 +5,7 @@
   @include flex;
   justify-content: space-around;
   align-items: center;
-  @include bottom-boarder-shadow;
+  @include bottom-border-shadow;
   height: 5em;
   margin-bottom: 2em;
 
