--- a/src/components/Matches/styles/MatchesPage.scss
+++ b/src/components/Matches/styles/MatchesPage.scss
@@ -1,58 +1,42 @@
 @import '../../../scss-lib/mixin';
 @import '../../../scss-lib/var';
 
-#MachesPage {
-  $mainPadding: 50px;
+#MatchesPage {
+  width: 100%;
+  @include flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 
-  --width: 80%;
-  --maxWidth: 400px;
-
-  @include tablet() {
-    --width: 46%;
-    --maxWidth: 500px;
-
-    @include flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-  @include pc() {
-  }
-
-  .profile-wrapper {
-    padding: 0;
-    margin: $mainPadding auto;
-    width: var(--width);
-    max-width: var(--maxWidth);
+  .MatchesPages-individualMatch-div {
+    width: 100vh;
     @include div-border-shadow;
-    text-align: center;
     border-radius: 10px;
-  }
+    @include flex;
+    align-items: center;
 
-  .info {
-    margin: $mainPadding;
-  }
-  .name {
-    margin-bottom: $mainPadding/2;
-  }
-
-  .details {
-    font-size: 0.9rem;
-    color: lighten($FONT_COLOR, 15%);
-  }
-
-  .button {
-    margin-top: calc(#{$mainPadding} - 2rem);
-  }
-  .btn-default {
-    background-color: $DUTCH_ORANGE;
-    color: white;
-    transition: $TRANSITION;
-    &:hover {
-      background-color: lighten($DUTCH_ORANGE, 15%);
+    .user {
+      justify-content: space-between;
+      width: 70%;
     }
-  }
 
-  img {
-    width: 100%;
+    #profile-button {
+      align-self: center;
+      .button {
+        align-self: center;
+        background-color: $DUTCH_ORANGE;
+        color: white;
+        transition: $TRANSITION;
+        &:hover {
+          background-color: lighten($DUTCH_ORANGE, 15%);
+        }
+      }
+    }
+
+    img {
+      margin: 1em;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+    }
   }
 }
