--- a/src/components/Profile/styles/ProfileCard.scss
+++ b/src/components/Profile/styles/ProfileCard.scss
@@ -36,7 +36,7 @@
     margin: 1.5em;
     .profile-genres {
       padding: 0.4em;
-      margin: 0 0.25em 0 0.25em;
+      margin: 0;
       background-color: $DUTCH_ORANGE;
       color: #ffffff;
       }
