--- a/src/components/Swipe/styles/Swipe.scss
+++ b/src/components/Swipe/styles/Swipe.scss
@@ -1,6 +1,7 @@
 @import '../../../scss-lib/var';
 
 #swipe {
+  width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,7 +12,7 @@
   width: 50vw;
   height: 5em;
   padding: 0.5em;
-  margin-top: -1.5em;
+  margin-top: -1.5vh;
   display: flex;
   justify-content: space-between;
   z-index: 1;
