styling and icons

--- a/src/components/Profile/styles/ProfileCard.scss
+++ b/src/components/Profile/styles/ProfileCard.scss
@@ -53,6 +53,7 @@
     display:flex;
     flex-direction:row;
     justify-content: space-around;
+    flex-wrap: wrap;
     .profile-instruments {
       background: url('../../../data/musical-instruments.png') no-repeat;
       height: 50px;
@@ -63,8 +64,12 @@
       &.Guitar {background-position: -390px -562px;}
       &.Bass {background-position: -342px -143px;}
       &.Drums {background-position: -91px -141px;}
+      &.Tambourine {background-position: -273px -443px;}
+      &.Vocals {background: url('../../../data/microphone.png');}
       &.Flute {background-position: -568px -203px;}
-      &.Timpani {background-position: -214px -204px;}
+      &.Violin {background-position: -213px -503px;}
+      &.Cello {background-position: -213px -25px;}
+      &.Saxophone {background-position: -336px -23px; }
     }
   }
 
