--- a/src/components/Profile/styles/ProfileSetup.css
+++ b/src/components/Profile/styles/ProfileSetup.css
@@ -1,4 +1,9 @@
 
+label {
+	font-size: 80%;
+	margin-bottom: 0;
+}
+
 #profile-form {
 	width: 98vw;
 	max-width: 400px;
@@ -7,4 +12,9 @@
 
 #profile-form > div, #profile-form .btn-primary {
 	margin-top: 1em;
+}
+
+.validation-error {
+	font-size: 80%;
+	color: red;	
 }
