added media queries

--- a/src/components/Profile/styles/ProfileCard.scss
+++ b/src/components/Profile/styles/ProfileCard.scss
@@ -6,7 +6,7 @@
 
   --width: 80%;
   --maxWidth: 600px;
-  max-height: 70vh;
+  max-height: vh;
   max-width: 600px;
   margin: 2em;
   @include flex;
